# python-template

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/workflows/: markdown.yaml  python.yaml
src/myapp/: main.py
src/myapp/mylib/: lib.py
tests/: test_main.py  test_mylib.py
