[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pdoc>=15.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[project.scripts]
uv-template = "myapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
