[metadata]
name = myapp
version = file: src/myapp/VERSION
author = Pierre-Olivier Huard
author_email = pierreolivier.huard@outlook.com
description = Python Template Project
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary License

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    myapp = myapp.main:main

[flake8]
exclude = docs
max-line-length = 100
# Ignore import warnings in __init__ files
per-file-ignores = __init__.py:F401
extend-ignore = E203

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
ignore_missing_imports = False

[isort]
profile = black

[coverage:run]
branch = True
source = myapp
parallel = True

[coverage:paths]
source =
    src/
    .tox/**/site-packages
